# blog.examples.cp_solver

./: Dockerfile  README.md
src/e1/: CMakeLists.txt  greedy_example_1.cpp
src/e2/: CMakeLists.txt  bad_case.json  bad_case_params.json  greedy_example_2.cpp
src/e3/: CMakeLists.txt  cpsolver_example_1.cpp
src/e4/: CMakeLists.txt  cpsolver_example_2.cpp
src/e5/: CMakeLists.txt  cpsolver_example_3.cpp
src/generator/: benchmark_items_10k.json  items.json  main.cr  params.json  shard.yml
